Set width and height of body to 100% to prevent white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@
 /* Setting default styling */
 body {
     min-height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     /* Generic project styles */
